# atomica-mcp

./: CHANGES.md  DOWNLOAD_ANNOTATIONS.md  GETTING_STARTED.md  INVESTIGATION_SUMMARY.md  LIBRARY_STRUCTURE.md  LIFESPAN_GENES_PDB_ANALYSIS.md  ORGANISM_MATCHING_ANALYSIS.md  PORT_SUMMARY.md  QUICK_START_LIBRARY.md  README.md  REFACTORING_SUMMARY.md  SIFTS_REFACTORING_SUMMARY.md  complexes_analysis_final.json  mcp-config-server.json  mcp-config-stdio.json  pyproject.toml  pytest.ini
data/input/: .gitignore
docs/: ATOMICA_INTEGRATION.md  ATOMICA_PAPER.md  ATOMICA_PORTING_SUMMARY.md  COMMANDS.md  COMPLEXES_REPORT.md  COMPLEXES_SUMMARY.md  ENTRY_POINTS.md  FAST_VS_SLOW_UNIPROT.md  FIX_MCP_HANGING.md  FLEXIBLE_API.md  GETTING_STARTED.md  IGF1_DOWNLOAD_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INDEX_FIRST_STRATEGY.md  LIFESPAN_GENES_PDB_ANALYSIS.md  MCP_SERVER_IMPLEMENTATION.md  MIGRATION_UPDATE_GUIDE.md  PERFORMANCE_ANALYSIS.md  TESTING.md  TEST_TIMEOUT_CONFIG.md  UPLOAD_TO_HF.md  lifespan_genes_pdbs.json
docs/preprocessing/: CONVERT_IDMAPPING.md  DOWNLOAD_ANNOTATIONS.md  DOWNLOAD_ATOMICA_DATASET.md  GENE_RESOLUTION.md  RESOLVE_PROTEINS_USAGE.md  RESOLVE_PROTEIN_NAMES.md
examples/: search_by_uniprot_example.py
notebooks/: check_proteins.ipynb  index.ipynb
src/atomica_mcp/: dataset.py  server.py  upload_to_hf.py
src/pdb_mcp/: __init__.py  server.py  (+4 more)
tests/: test_get_structures_for_uniprot.py  test_mcp_integration.py  test_mcp_server.py  test_organism_normalization.py  test_pdb_mining.py  test_pdb_resolution.py  test_search_by_uniprot_fix.py  test_uniprot_resolution.py
(+3 files in other folders)
