[project]
name = "pdb-mcp"
version = "0.1.0"
description = "MCP server for PDB structure queries and protein resolution using AnAge database"
readme = "README.md"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "biotite>=1.2.0",
    "eliot>=1.17.5",
    "fastmcp>=2.12.5",
    "fsspec>=2025.9.0",
    "polars>=1.34.0",
    "pycomfort>=0.0.18",
    "requests>=2.31.0",
    "tenacity>=9.1.2",
    "typer>=0.16.0",
    "urllib3>=2.0.0",
]

[project.scripts]
pdb-mcp = "pdb_mcp.__main__:app"
pdb-mcp-stdio = "pdb_mcp.__main__:cli_app_stdio_standalone"
pdb-mcp-sse = "pdb_mcp.__main__:cli_app_sse_standalone"
pdb-mcp-run = "pdb_mcp.__main__:cli_app_run"
resolve = "pdb_mcp.resolve_proteins:app"
download-pdb = "pdb_mcp.sifts.download:app"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.9",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pdb_mcp"]

[tool.hatch.build]
exclude = [
    "*.log",
    "logs/",
    "*.pyc",
    ".venv/",
    ".pytest_cache/",
    "test/",
    "tests/",
    "*.db",
    "temp*.sqlite*",
]
